--- a/themes/Tokyo Night Storm.css
+++ b/themes/Tokyo Night Storm.css
@@ -139,3 +139,7 @@ body {
 .monaco-list-row:hover:not(.selected):not(.focused) {
   background-color: transparent !important;
 }
+
+.label-container .label {
+  color: white !important;
+}
