--- a/themes/Paradise Smoked Glass.css
+++ b/themes/Paradise Smoked Glass.css
@@ -209,3 +209,7 @@ body {
         background-color: transparent !important;
     }
 }
+
+.label-container .label {
+  color: white !important;
+}
